--- a/src/pages/_index.css
+++ b/src/pages/_index.css
@@ -5,7 +5,7 @@
 
 	--error-background: #ffe5e5;
 	--error-text: #ac0000;
-	--timer-background: #ffe5e5;
+	--timer-background: silver;
 
 	--black: #000000;
 	--white: #FFFFFF;
